--- a/axis-extension.qmd
+++ b/axis-extension.qmd
@@ -1,15 +1,15 @@
 ---
 title: "Axis Limits and Denominator Information Influence Magnitude Ratings in Bar Charts"
-format: html
+format: docx
 editor: visual
 author:
   - name: Duncan Bradley
   - name: Harvey Schneider
   - name: Caroline Jay
-  - name: Andrew Stewart
+  - name: Andrew J. Stewart
 
 params: 
-  eval_models: true
+  eval_models: false
     
 execute:
   echo: false
@@ -300,7 +300,7 @@ gender_e2 <- e2 %>%
   pivot_wider(names_from = gender, values_from = freq)
 ```
 
-\#{{< include text_body/abstract.md >}}
+{{< include text_body/abstract.md >}}
 
 {{< include text_body/introduction.md >}}
 
@@ -323,6 +323,7 @@ For charts with extended axes, the denominator value y-axis upper limit. The oth
 ```{r}
 #| label: fig-example-charts
 #| include: true
+#| fig-cap: Example charts for Experiment 1. The same data appears in both charts. The chart with the default axes (left) employs an upper limit determined by ggplot2. The chart with the extended axes (right) employes an upper limit equal to the dataset's denominator value.
 img1 <- image_read("images/E14trunc.png")
 img2 <- image_read("images/E14full.png")
 image_append(c(img1, img2))
@@ -330,9 +331,9 @@ image_append(c(img1, img2))
 
 For the majority of datasets generated, the default settings produced charts where the highest gridline did not exceed the tallest bar. For consistency, when the opposite situation occurred, we used a different random seed to generate an alternative dataset for both conditions. `r printnum(get_anomalies(e1), digits = 0)`% of datasets used were generated using this method.
 
-In experimental trials (32 total), plotted values consisted of relatively small proportions of the dataset's denominator value (roughly 20% or 40%). To introduce variety and encourage attention, eight filler trials showed plotted values which were roughly 90% of the corresponding denominator value. Denominators for filler trials were selected so that numerical labels on the y-axis would approximately resembled either extended or default experimental trials.
+In experimental trials (32 total), plotted values consisted of relatively small proportions of the dataset's denominator value (roughly 20% or 40%). To introduce variety and encourage attention, eight filler trials showed plotted values which were roughly 90% of the corresponding denominator value. Denominators for filler trials were selected so that numerical labels on the y-axis would approximately resemble either extended or default bar charts from experimental trials.
 
-We included six attention check trials to assess participants' engagement with the task. These trials were similar to experimental and filler trials, comprising of text, a bar chart, question and visual analogue scale. However, participants were instructed to ignore the bar chart and provide a specified response on the visual analogue scale.
+We included six attention check trials to assess participants' engagement with the task. These trials were similar to experimental and filler trials, consisting of text, a bar chart, a question and an visual analogue scale. However, participants were instructed to ignore the bar chart and provide a specified response on the visual analogue scale.
 
 ### Design
 
@@ -352,12 +353,12 @@ This experiment was approved by the University of Manchester's Division of Neuro
 
 We programmed the experiment using PsychoPy (version 2022.1.4, [@peirce_psychopy2_2019]). Participants were instructed to carry out the experiment using a laptop or desktop computer (not a mobile phone or tablet). After providing informed consent, participants completed a demographic questionnaire and Garcia-Retamero et al.'s [@garcia-retamero_measuring_2016] five-item subjective data visualisation literacy scale.
 
-Participants were asked to imagine they were a researcher tasked with determining the outcome of experiments and surveys. They were instructed, to make an overall assessment of all data presented in a graph after studying the text, graph, and question. All questions asked about plotted values' magnitudes (e.g., 'How successful were the manufacturing methods?'), with participants responding on visual analogue scales with anchors at the extremes (e.g., 'very unsuccessful', 'very successful'). @fig-e1-trial shows an example trial.
+Participants were asked to imagine they were a researcher tasked with determining the outcome of experiments and surveys. They were instructed to make an overall assessment of all data presented in a graph after studying the text, graph, and question. All questions asked about plotted values' magnitudes (e.g., 'How successful were the manufacturing methods?'), with participants responding on visual analogue scales with anchors at the extremes (e.g., 'very unsuccessful', 'very successful'). @fig-e1-trial shows an example trial.
 
 ```{r}
 #| label: fig-e1-trial
 #| include: true
-
+#| fig-cap: An example trial from Experiment 1, showing a bar chart with a default axis limit. 
 include_graphics("images/trial_e1.png")
 ```
 
@@ -369,18 +370,19 @@ We conducted analysis using R [@r_core_team_r_2022] (version 4.2.1). Linear mixe
 
 ### Magnitude Ratings
 
-@fig-e1-mag shows the distribution of individual responses for charts with default axes and extended axes.
+@fig-e1-mag shows the distribution of ratings for charts with default axes and extended axes.
 
 ```{r}
 #| label: fig-e1-mag
 #| include: true
+#| fig-cap: The distribution of visual analogue scale ratings in response to default and extended axis limits. Each circle represents a participant's response to an individual bar chart.
 e1 %>%
   ggplot(aes(x = slider.response, y = cond)) +
   geom_jitter(width = 0,
               height = 0.2,
               alpha = 0.1) +
   scale_y_discrete(breaks = c("extend", "default"),
-                   labels = c("Extended", "Default")) + 
+                   labels = c("Extended\nAxis\nLimit", "Default\nAxis\nLimit")) + 
   labs(title = "Experiment 1",
        subtitle =  "Raw Data",
       y = NULL,
@@ -447,7 +449,7 @@ Experiment 1 found differences in interpretations of data presented using differ
 
 By manipulating the presence of denominator information in accompanying text, in addition to manipulating axis limits, we investigate how these textual and graphical cues inform assessments of data. This allows us to understand how different chart designs are interpreted with and without additional numerical context. This 2x2 design also allows us to replicate the findings from Experiment 1 and explore whether ratings in the absence of denominator information correspond to the previously observed pattern of extreme ratings.
 
-This follow-up experiment requires minor adaptations to materials and procedure. First, there is a risk that highly ambiguous trials without denominator information supplied in text will elicit unreliable random ratings. Therefore, we collect additional confidence ratings to directly indexing this aspect of participants' evaluations. This provides a more comprehensive view of participants' cognitive states and interpretations. Second, when denominators are not supplied in text, participants may use denominator values supplied in previous trials to inform their judgements. A limited range of denominators (as in Experiment 1) would artificially diminish uncertainty regarding possible values, inhibiting authentic, spontaneous judgements. Therefore, we expand the range of denominators values in Experiment 2. Third, increasing the number of fillers (which depict relatively high magnitudes) to match the number of experimental items (which depict relatively low magnitudes) will avoiding priming effects by ensuring high and low magnitudes seem equally plausible.
+This follow-up experiment requires minor adaptations to materials and procedure. First, there is a risk that highly ambiguous trials without denominator information supplied in text will elicit unreliable random ratings. Therefore, we collect additional confidence ratings to directly index this aspect of participants' evaluations. This provides a more comprehensive view of participants' cognitive states and interpretations. Second, when denominators are not supplied in text, participants may use denominator values supplied in previous trials to inform their judgements. A limited range of denominators (as in Experiment 1) would artificially diminish uncertainty regarding possible values, inhibiting authentic, spontaneous judgements. Therefore, we expand the range of denominators values in Experiment 2. Third, increasing the number of fillers (which depict relatively high magnitudes) to match the number of experimental items (which depict relatively low magnitudes) will avoid priming effects by ensuring high and low magnitudes seem equally plausible.
 
 ## Method
 
@@ -463,7 +465,7 @@ We added the word 'surveyed' or 'assessed' to accompanying text for seven items 
 
 ### Design
 
-We employed a within-participants 2x2 Latin-squared design with two factors: Axis Limit (default vs. extended) and denominator presence (present vs. absent). Participants viewed 8 different charts for each combination of conditions (32 experimental trials total). The correspondence between scenarios and conditions was counterbalanced using four lists. However, all participants saw the same versions of the 32 filler items and six attention check items.
+We employed a within-participants 2x2 Latin-squared design with two factors: axis limits (default vs. extended) and denominator information (present vs. absent). Participants viewed 8 different charts for each combination of conditions (32 experimental trials total). The correspondence between scenarios and conditions was counterbalanced using four lists. However, all participants saw the same versions of the 32 filler items and six attention check items.
 
 ### Participants
 
@@ -471,7 +473,7 @@ Participants were recruited using Prolific.co, using the same inclusion criteria
 
 Data were returned by 208 participants. Per pre-registered exclusion criteria, eight participants' submissions were rejected because they answered more than one of six attention check questions incorrectly. Participants whose submissions were accepted received £5.00.
 
-The final sample consisted of 200 participants (`r printnum(gender_e2$M)`% male, `r printnum(gender_e2$F)`% female, `r printnum(gender_e2$NB)`% non-binary, `r printnum(gender_e2$Another)`% other, `r printnum(gender_e2$Pnts)`% prefer not say). Mean age was `r printnum(e2 %>% pull(ageResp.text) %>% mean(na.rm = T))` years (*SD* = `r printnum(e2 %>% pull(ageResp.text) %>% sd(na.rm = T))`)[^1]. The mean data visualisation literacy score was `r printnum(e2 %>% pull(literacy) %>% mean())` (*SD* = `r printnum(e2 %>% pull(literacy) %>% sd())`), out of a maximum of 30.
+The final sample consisted of 200 participants (`r printnum(gender_e2$M)`% male, `r printnum(gender_e2$F)`% female, `r printnum(gender_e2$NB)`% non-binary, `r printnum(gender_e2$Another)`% other, `r printnum(gender_e2$Pnts)`% prefer not to say). Mean age was `r printnum(e2 %>% pull(ageResp.text) %>% mean(na.rm = T))` years (*SD* = `r printnum(e2 %>% pull(ageResp.text) %>% sd(na.rm = T))`)[^1]. The mean data visualisation literacy score was `r printnum(e2 %>% pull(literacy) %>% mean())` (*SD* = `r printnum(e2 %>% pull(literacy) %>% sd())`), out of a maximum of 30.
 
 [^1]: Age data was unavailable for `r e2 %>% distinct(participant, .keep_all = TRUE) %>% pull(ageResp.text) %>% is.na() %>% sum()` participants
 
@@ -488,6 +490,7 @@ Average completion time was `r printnum(e2 %>% pull(total_duration) %>% mean(), 
 ```{r}
 #| label: fig-e2-trial
 #| include: true
+#| fig-cap: An example trial from Experiment 2, showing a bar chart with an extended axis limit. Note the presence of an additional confidence rating scale.
 
 include_graphics("images/trial_e2.png")
 ```
@@ -501,6 +504,7 @@ include_graphics("images/trial_e2.png")
 ```{r}
 #| label: fig-e2-mag
 #| include: true
+#| fig-cap: The distribution of visual analogue scale ratings in response to default and extended axis limits, shown separately for trials where denominator values were absent from accompanying text (top), and trials where denominator values were present in accompanying text (bottom). Each circle represents a participant's response to an individual bar chart.
 
 denom_labs <- c("Denominator Present in Text", 
                  "Denominator Absent from Text")
@@ -512,7 +516,7 @@ e2 %>%
               height = 0.2,
               alpha = 0.1) +
   scale_y_discrete(limits = c("extend", "default"),
-                   labels = c("Extended", "Default")) + 
+                   labels = c("Extended\nAxis Limit", "Default\nAxis Limit")) + 
   labs(title = "Experiment 2 - Magnitude Ratings",
        subtitle =  "Raw Data",
       y = NULL,
@@ -539,9 +543,9 @@ e2_mag <- buildmer(mag_slider.response ~ axis*denominator +
 summary_extract(e2_mag)
 ```
 
-A mixed effects model revealed that charts with default axes elicited higher ratings than chart with extended axes (F(`r printnum(e2_mag_axis_NumDF)`, `r printnum(e2_mag_axis_DenDF)`) = `r printnum(e2_mag_axis_F.value)`, p `r printp(e2_mag_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_Eta2_partial)`) and charts not accompanied by a denominator in text elicited higher ratings than those accompanied by a denominator (F(`r printnum(e2_mag_denominator_NumDF)`, `r printnum(e2_mag_denominator_DenDF)`) = `r printnum(e2_mag_denominator_F.value)`, p `r printp(e2_mag_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_denominator_Eta2_partial)`).
+A mixed effects model revealed that charts with default axes elicited higher ratings compared to charts with extended axes (F(`r printnum(e2_mag_axis_NumDF)`, `r printnum(e2_mag_axis_DenDF)`) = `r printnum(e2_mag_axis_F.value)`, p `r printp(e2_mag_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_Eta2_partial)`) and charts not accompanied by a denominator in text elicited higher ratings than those accompanied by a denominator (F(`r printnum(e2_mag_denominator_NumDF)`, `r printnum(e2_mag_denominator_DenDF)`) = `r printnum(e2_mag_denominator_F.value)`, p `r printp(e2_mag_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_denominator_Eta2_partial)`).
 
-Crucially, there was also a significant interaction between Axis Limit and denominator presence: F(`r printnum(e2_mag_axis_denominator_NumDF)`, `r printnum(e2_mag_axis_denominator_DenDF)`) = `r printnum(e2_mag_axis_denominator_F.value)`, p `r printp(e2_mag_axis_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_denominator_Eta2_partial)`. @fig-e2-mag-int plots this interaction.
+Crucially, there was also a significant interaction between axis limits and denominator information: F(`r printnum(e2_mag_axis_denominator_NumDF)`, `r printnum(e2_mag_axis_denominator_DenDF)`) = `r printnum(e2_mag_axis_denominator_F.value)`, p `r printp(e2_mag_axis_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_axis_denominator_Eta2_partial)`. @fig-e2-mag-int plots this interaction.
 
 ```{r}
 #| label: e2-mag-contrasts
@@ -558,12 +562,13 @@ Pairwise comparisons produced using {emmeans} [@lenth_emmeans_2021] revealed tha
 random_str(e2_mag)
 ```
 
-This model employed by-participant and by-item random effects. For each participant, there were random intercepts, plus random slopes for axis settings and denominator presence. For each item, there were random intercepts, plus random slopes for denominator presence.
+This model employed by-participant and by-item random effects. For each participant, there were random intercepts, plus random slopes for axis settings and denominator information. For each item, there were random intercepts, plus random slopes for denominator information.
 
 ```{r}
 #| label: fig-e2-mag-int
 #| include: true
 #| message: false
+#| fig-cap: The interaction between axis limits and denominator information, for magnitude ratings. Estimated marginal means are generated by the linear mixed model used in analysis. Translucent bars show 95% confidence intervals.
 
 my_palette <- unname(palette.colors(palette = "Okabe-Ito")[2:3])
 
@@ -605,13 +610,14 @@ e2_mag_l <- lmer(add.terms(formula(e2_mag),
 summary_extract(e2_mag_l)
 ```
 
-Accounting for differences in data visualisation literacy did not change the significant interaction: F(`r printnum(e2_mag_l_axis_denominator_NumDF)`, `r printnum(e2_mag_l_axis_denominator_DenDF)`) = `r printnum(e2_mag_l_axis_denominator_F.value)`, p `r printp(e2_mag_l_axis_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_l_axis_denominator_Eta2_partial)`., the main effect of axis limit (F(`r printnum(e2_mag_l_axis_NumDF)`, `r printnum(e2_mag_l_axis_DenDF)`) = `r printnum(e2_mag_l_axis_F.value)`, p `r printp(e2_mag_l_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_l_axis_Eta2_partial)`) or the main effect of denominator presence (F(`r printnum(e2_mag_l_denominator_NumDF)`, `r printnum(e2_mag_l_denominator_DenDF)`) = `r printnum(e2_mag_l_denominator_F.value)`, p `r printp(e2_mag_l_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_l_denominator_Eta2_partial)`).
+Accounting for differences in data visualisation literacy did not change the significant interaction: F(`r printnum(e2_mag_l_axis_denominator_NumDF)`, `r printnum(e2_mag_l_axis_denominator_DenDF)`) = `r printnum(e2_mag_l_axis_denominator_F.value)`, p `r printp(e2_mag_l_axis_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_l_axis_denominator_Eta2_partial)`., the main effect of axis limits (F(`r printnum(e2_mag_l_axis_NumDF)`, `r printnum(e2_mag_l_axis_DenDF)`) = `r printnum(e2_mag_l_axis_F.value)`, p `r printp(e2_mag_l_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_l_axis_Eta2_partial)`) or the main effect of denominator information (F(`r printnum(e2_mag_l_denominator_NumDF)`, `r printnum(e2_mag_l_denominator_DenDF)`) = `r printnum(e2_mag_l_denominator_F.value)`, p `r printp(e2_mag_l_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_mag_l_denominator_Eta2_partial)`).
 
 ### Confidence Ratings
 
 ```{r}
 #| label: fig-e2-con
 #| include: true
+#| fig-cap: The distribution of confidence ratings in response to default and extended axis limits, shown separately for trials where denominator values were absent from accompanying text (top), and trials where denominator values were present in accompanying text (bottom). Each circle represents a participant's response to an individual bar chart.
 
 denom_labs <- c("Denominator Present in Text", 
                  "Denominator Absent from Text")
@@ -623,7 +629,7 @@ e2 %>%
               height = 0.2,
               alpha = 0.1) +
   scale_y_discrete(breaks = c("extend", "default"),
-                   labels = c("Extended", "Default")) + 
+                   labels = c("Extended\nAxis Limit", "Default\nAxis Limit")) + 
   labs(title = 'Experiment 2 - Confidence Ratings',
        subtitle = "Raw Data",
       y = NULL,
@@ -667,7 +673,7 @@ get_contrasts(e2_con_emm, condition = "denominator")
 #| label: fig-e2-con-int
 #| include: true
 #| message: false
-#| fig-cap: with 95% confidence intervals
+#| fig-cap: The interaction between axis limits and denominator information, for confidence ratings. Estimated marginal means are generated by the linear mixed model used in analysis. Translucent bars show 95% confidence intervals.
 
 my_palette <- unname(palette.colors(palette = "Okabe-Ito")[2:3])
 
@@ -699,7 +705,7 @@ emmip(e2_con@model, denominator ~ axis,
 summary_extract(e2_con)
 ```
 
-A mixed effects model revealed was a main effect associated with axis limits (F(`r printnum(e2_con_axis_NumDF)`, `r printnum(e2_con_axis_DenDF)`) = `r printnum(e2_con_axis_F.value)`, p `r printp(e2_con_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_axis_Eta2_partial)`), a main effect associated with denominator presence (F(`r printnum(e2_con_denominator_NumDF)`, `r printnum(e2_con_denominator_DenDF)`) = `r printnum(e2_con_denominator_F.value)`, p `r printp(e2_con_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_denominator_Eta2_partial)`) and an interaction F(`r printnum(e2_con_denominator_axis_NumDF)`, `r printnum(e2_con_denominator_axis_DenDF)`) = `r printnum(e2_con_denominator_axis_F.value)`, p `r printp(e2_con_denominator_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_denominator_axis_Eta2_partial)`. This interaction consisted of a difference between extended and default charts when the denominator was absent from text (z = `r printnum(e2_con_emm_abs_z.ratio)`, p `r printp(e2_con_emm_abs_p.value)`), but no difference between charts the denominator was present (z = `r printnum(e2_con_emm_pres_z.ratio)`, p `r printp(e2_con_emm_pres_p.value, add_equals = TRUE)`). However, it is clear from @fig-e2-con-int, as well as the partial $\eta^2$ values, that the effect sizes associated with axis limits and the interaction are trivial.
+A mixed effects model revealed a main effect associated with axis limits (F(`r printnum(e2_con_axis_NumDF)`, `r printnum(e2_con_axis_DenDF)`) = `r printnum(e2_con_axis_F.value)`, p `r printp(e2_con_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_axis_Eta2_partial)`), a main effect associated with denominator information (F(`r printnum(e2_con_denominator_NumDF)`, `r printnum(e2_con_denominator_DenDF)`) = `r printnum(e2_con_denominator_F.value)`, p `r printp(e2_con_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_denominator_Eta2_partial)`) and an interaction F(`r printnum(e2_con_denominator_axis_NumDF)`, `r printnum(e2_con_denominator_axis_DenDF)`) = `r printnum(e2_con_denominator_axis_F.value)`, p `r printp(e2_con_denominator_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_denominator_axis_Eta2_partial)`. This interaction consisted of a difference between extended and default charts when the denominator was absent from text (z = `r printnum(e2_con_emm_abs_z.ratio)`, p `r printp(e2_con_emm_abs_p.value)`), but no difference between charts when the denominator was present (z = `r printnum(e2_con_emm_pres_z.ratio)`, p `r printp(e2_con_emm_pres_p.value, add_equals = TRUE)`). However, it is clear from @fig-e2-con-int, as well as the partial $\eta^2$ values, that the effect sizes associated with axis limits and the interaction are trivial.
 
 ### Confidence Ratings and Data Visualisation Literacy
 
@@ -717,10 +723,12 @@ e2_con_l <- lmer(add.terms(formula(e2_con),
 summary_extract(e2_con_l)
 ```
 
-Accounting for differences in data visualisation literacy did not change the pattern of results. There was a main effect associated with axis limits (F(`r printnum(e2_con_l_axis_NumDF)`, `r printnum(e2_con_l_axis_DenDF)`) = `r printnum(e2_con_l_axis_F.value)`, p `r printp(e2_con_l_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_l_axis_Eta2_partial)`) and a main effect associated with denominator presence (F(`r printnum(e2_con_l_denominator_NumDF)`, `r printnum(e2_con_l_denominator_DenDF)`) = `r printnum(e2_con_l_denominator_F.value)`, p `r printp(e2_con_l_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_l_denominator_Eta2_partial)`) and an interaction F(`r printnum(e2_con_l_denominator_axis_NumDF)`, `r printnum(e2_con_l_denominator_axis_DenDF)`) = `r printnum(e2_con_l_denominator_axis_F.value)`, p `r printp(e2_con_l_denominator_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_l_denominator_axis_Eta2_partial)`.
+Accounting for differences in data visualisation literacy did not change the pattern of results. There was a main effect associated with axis limits (F(`r printnum(e2_con_l_axis_NumDF)`, `r printnum(e2_con_l_axis_DenDF)`) = `r printnum(e2_con_l_axis_F.value)`, p `r printp(e2_con_l_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_l_axis_Eta2_partial)`) and a main effect associated with denominator information (F(`r printnum(e2_con_l_denominator_NumDF)`, `r printnum(e2_con_l_denominator_DenDF)`) = `r printnum(e2_con_l_denominator_F.value)`, p `r printp(e2_con_l_denominator_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_l_denominator_Eta2_partial)`) and an interaction F(`r printnum(e2_con_l_denominator_axis_NumDF)`, `r printnum(e2_con_l_denominator_axis_DenDF)`) = `r printnum(e2_con_l_denominator_axis_F.value)`, p `r printp(e2_con_l_denominator_axis_p, add_equals = T)`, partial $\eta^2$ = `r printnum(e2_con_l_denominator_axis_Eta2_partial)`.
 
 ## Discussion
 
-This experiment manipulated bar charts' axis limits, and the presence of denominator values in accompanying text. The results demonstrate that values presented in charts with default axis limits are associated with higher magnitudes, than charts with extended axes, in both the presence and absence of denominator information. However, the absence of denominator information amplifies this bias. These results also suggest that extreme high magnitude ratings for default charts in the presence of a denominator value may be driven by a failure to incorporate that value into reasoning. Finally, confidence in judgements is reliably affected by the inclusion of denominator information in text.
+This experiment manipulated bar charts' axis limits and the presence of denominator values in accompanying text. The results demonstrate that values presented in charts with default axis limits are associated with higher magnitudes than charts with extended axes, in both the presence and absence of denominator information. However, the absence of denominator information amplifies this bias. These results also suggest that extreme high magnitude ratings for default charts in the presence of a denominator value may be driven by a failure to incorporate that value into reasoning. Finally, confidence in judgements is reliably affected by the inclusion of denominator information in text.
 
 {{< include text_body/discussion.md >}}
+
+# References
